test/invalid/baseline/iterable-empty.txt
Syntax error at line 2 in iterable-empty.widl, since `interface X`:
    iterable<>;
             ^ Missing a type argument in iterable declaration
